version 1.0.1: Updated signup name to fname and lname
